--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueuse/motion": "^2.0.0-beta.12",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "node-sass": "^7.0.3",
+    "sass-loader": "^13.1.0",
+    "unplugin-vue-components": "^0.22.9",
+    "vue": "^3.2.13",
+    "vue-i18n": "^9.3.0-beta.10",
+    "vue-router": "4",
+    "vue3-mq": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +25,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "prettier": "2.7.1"
   },
   "eslintConfig": {
     "root": true,
