--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.2.13",
     "vue-i18n": "^9.3.0-beta.10",
     "vue-router": "4",
+    "vue-toastification": "^2.0.0-rc.5",
     "vue3-mq": "^3.1.3"
   },
   "devDependencies": {
