--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vueuse/motion": "^2.0.0-beta.12",
+    "axios": "^1.2.2",
     "core-js": "^3.8.3",
     "node-sass": "^7.0.3",
     "sass-loader": "^13.1.0",
