--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass-loader": "^13.1.0",
     "unplugin-vue-components": "^0.22.9",
     "vue": "^3.2.13",
+    "vue-gtag": "^2.0.1",
     "vue-i18n": "^9.3.0-beta.10",
     "vue-router": "4",
     "vue-toastification": "^2.0.0-rc.5",
