--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@vueuse/motion": "^2.0.0-beta.12",
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
+    "jsdom": "^22.1.0",
     "node-sass": "^7.0.3",
     "sass-loader": "^13.1.0",
+    "scrollmagic": "^2.0.8",
     "unplugin-vue-components": "^0.22.9",
     "vue": "^3.2.13",
     "vue-gtag": "^2.0.1",
